product-service/deployment-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ayoub260304/product-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3001

          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"

          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
